Some refactoring according PMD results